...
                  padding: EdgeInsets.symmetric(
                      horizontal: 24, vertical: isSmallScreen ? 16 : 32),
                  child: Column(
                    mainAxisSize: MainAxisSize.min,
                    children: [
                      Text(
                        'Sign In',
                        style: theme.textTheme.headlineSmall,
                      ),
                      const SizedBox(height: 6),
                      Text(
                        'Sign in to continue',
                        style: theme.textTheme.bodyMedium?.copyWith(
...
                                  colors: [
                                    colorScheme.onPrimary,
                                    colorScheme.onPrimary.withOpacity(0.8),
                                    colorScheme.onPrimary.withOpacity(0.6),
                                  ],
                                )
                              : const Text('Login'),
                        ),
                      ),
                      // ✨ [MODIFY] Reduced spacing
                      const SizedBox(height: 12),
                      SizedBox(
                        width: double.infinity,
...
                  padding: const EdgeInsets.only(top: 12),
                  child: TextButton(
                    key: const Key('login_register_navigation_button'),
                    onPressed: () {
                      Navigator.pushNamed(context, '/register');
                    },
                    child: const Text('Don’t have an account? Register here'),
                  ),
                ),
              ],
            ),
          ),
        ),
...
